tests/invalid/comment_partial_indent.nano
..
    person..
      # Comment indentation must use complete levels.
